--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-  pull:
+  pull_request:
     branches:
       - main
   workflow_dispatch:
@@ -14,5 +14,16 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}  
+
+
       - name: build image
         run: docker build . -t phoenix4066/boardgame:v1
