--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -27,3 +27,5 @@ jobs:
 
       - name: build image
         run: docker build . -t phoenix4066/boardgame:v1
+      - name: push image
+        run: docker push phoenix4066/boardgame:v2  
