--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -26,6 +26,6 @@ jobs:
 
 
       - name: build image
-        run: docker build . -t phoenix4066/boardgame-fromgit:v3
+        run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}//boardgame-fromgit:v3
       - name: push image
-        run: docker push phoenix4066/boardgame:v3  
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3  
