--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -26,6 +26,6 @@ jobs:
 
 
       - name: build image
-        run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}//boardgame-fromgit:v3
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}//boardgame-fromgit:v3 .
       - name: push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3  
