--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -15,6 +15,16 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          cache: 'maven'
+
+      - name: Build with maven 
+        run: mvn clean install -DskipTests      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -26,6 +36,6 @@ jobs:
 
 
       - name: build image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3 .
+        run: docker build -f -t Dockerfile1 ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3 .
       - name: push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3  
