--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -36,6 +36,6 @@ jobs:
 
 
       - name: build image
-        run: docker build -f -t Dockerfile1 ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3 .
+        run: docker build -f Dockerfile1 -t ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3 .
       - name: push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3  
