--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -16,6 +16,38 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
+      - name : fetch all tags 
+        run: git fetch --tags 
+        
+      - name: Set Version
+        id: set-version
+        run: |
+          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          if [ -z "$latest_tag" ]; then
+            new_version="1.0.0"
+          else
+            IFS='.' read -r major minor patch <<< "${latest_tag#v}"
+            patch=$((patch + 1))
+            new_version="$major.$minor.$patch"
+          fi
+          echo "New version: $new_version"
+          echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
+
+      - name: Create Git Tag
+        run: |
+          git tag -a "v${{ steps.set-version.outputs.new_version }}" -m "Release v${{ steps.set-version.outputs.new_version }}"
+          git push origin "v${{ steps.set-version.outputs.new_version }}"  
+
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: "v${{ steps.set-version.outputs.new_version }}"
+          release_name: "Release v${{ steps.set-version.outputs.new_version }}"
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}         
+
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
@@ -35,13 +67,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}  
       
-      - name: Build Docker image
+      - name: Build Docker image and push to docker hub
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile1
           push: true         # set to true if you want to push to Docker Hub
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3
+          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v${{ steps.set-version.outputs.new_version }}
+
 
 
       #- name: push image
