--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -38,11 +38,19 @@ jobs:
           git config user.name "Harsha"
           git config user.email "harshavardhana.m03@gmail.com"
     
+      - name: Set Git user
+        run: |
+          git config user.name "Harshavardhana"
+          git config user.email "your-email@users.noreply.github.com"
 
-      - name: Create Git Tag
+      - name: Push Git tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         run: |
           git tag -a "v${{ steps.set-version.outputs.new_version }}" -m "Release v${{ steps.set-version.outputs.new_version }}"
-          git push origin "v${{ steps.set-version.outputs.new_version }}"  
+          git push https://x-access-token:${MY_GITHUB_TOKEN}@github.com/${{ github.repository }} "v${{ steps.set-version.outputs.new_version }}"
+
+      
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
