--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -37,17 +37,17 @@ jobs:
           echo "New version: $new_version"
           echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
     
-      - name: Set Git user
-        run: |
-          git config user.name "Harshavardhana"
-          git config user.email "your-email@users.noreply.github.com"
-
       - name: Push Git tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git tag -a "v${{ steps.set-version.outputs.new_version }}" -m "Release v${{ steps.set-version.outputs.new_version }}"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "v${{ steps.set-version.outputs.new_version }}"
+          NEW_TAG="v${{ steps.set-version.outputs.new_version }}"
+          if git rev-parse "$NEW_TAG" >/dev/null 2>&1; then
+          echo "Tag $NEW_TAG already exists. Skipping."
+          else
+          git tag -a "$NEW_TAG" -m "Release $NEW_TAG"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "$NEW_TAG"
+          fi
 
       
 
