--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,95 +1,64 @@
-name: Build, Tag, Release and Docker Push
+name: Build and publish image to docker hub
 
 permissions:
   contents: write
 
 on:
-  workflow_dispatch:       # Manual trigger
   push:
     branches:
       - main
-      - feature/**          # All feature branches
-
+      - feature
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+    
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      new_version: ${{ steps.set-version.outputs.new_version }}
-
     steps:
-      # Step 1: Checkout repository
-      - name: Checkout repository
+      - name: checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0       # Required to fetch all tags
 
-      # Step 2: Fetch all tags
-      - name: Fetch all tags
-        run: git fetch --tags
-
-      # Step 3: Set Version
+      - name : fetch all tags 
+        run: git fetch --tags 
+        
       - name: Set Version
         id: set-version
         run: |
-          # Get the latest numeric tag (ignore pre-releases or branch tags)
-          latest_tag=$(git tag --sort=-creatordate | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -n1)
-
+          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           if [ -z "$latest_tag" ]; then
-            base_version="1.0.0"
+            new_version="1.0.0"
           else
             IFS='.' read -r major minor patch <<< "${latest_tag#v}"
             patch=$((patch + 1))
-            base_version="$major.$minor.$patch"
+            new_version="$major.$minor.$patch"
           fi
-
-          # Sanitize branch name
-          branch_name=${GITHUB_REF_NAME//\//-}
-
-          # Feature branch version
-          if [[ "$GITHUB_REF_NAME" != "refs/heads/main" ]]; then
-            new_version="${base_version}-${branch_name}"
-          else
-            new_version="$base_version"
-          fi
-
           echo "New version: $new_version"
           echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
-
-      # Step 4: Set Git user
+    
       - name: Set Git user
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      # Step 5: Create Git tag if it doesn't exist
+          git config user.name "Harshavardhana"
+          git config user.email "your-email@users.noreply.github.com"
       - name: Push Git tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          NEW_TAG="v${{ steps.set-version.outputs.new_version }}"
-          if git rev-parse "$NEW_TAG" >/dev/null 2>&1; then
-            echo "Tag $NEW_TAG already exists. Skipping tag creation."
-          else
-            git tag -a "$NEW_TAG" -m "Release $NEW_TAG"
-            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "$NEW_TAG"
-          fi
+          git tag -a "v${{ steps.set-version.outputs.new_version }}" -m "Release v${{ steps.set-version.outputs.new_version }}"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "v${{ steps.set-version.outputs.new_version }}"
+      
 
-      # Step 6: Create GitHub Release if it doesn't exist
       - name: Create GitHub Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: "v${{ steps.set-version.outputs.new_version }}"
+          release_name: "Release v${{ steps.set-version.outputs.new_version }}"
+          draft: false
+          prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          NEW_TAG="v${{ steps.set-version.outputs.new_version }}"
-          if gh release view "$NEW_TAG" >/dev/null 2>&1; then
-            echo "Release $NEW_TAG already exists. Skipping."
-          else
-            gh release create "$NEW_TAG" \
-              --title "Release $NEW_TAG" \
-              --notes "Automated release for $NEW_TAG" \
-              --prerelease $([[ "${GITHUB_REF_NAME}" != "refs/heads/main" ]] && echo true || echo false)
-          fi
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}         
 
-      # Step 7: Set up JDK 11
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
@@ -97,27 +66,29 @@ jobs:
           java-version: '11'
           cache: 'maven'
 
-      # Step 8: Build with Maven
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
+      - name: Build with maven 
+        run: mvn clean install -DskipTests      
 
-      # Step 9: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 10: Login to Docker Hub
-      - name: Login to Docker Hub
+      - name: Login to docker hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Step 11: Build Docker image and push **only on main branch**
-      - name: Build and Push Docker Image
+          password: ${{ secrets.DOCKERHUB_TOKEN }}  
+      
+      - name: Build Docker image and push to docker hub
         uses: docker/build-push-action@v4
-        if: github.ref == 'refs/heads/main'
         with:
           context: .
           file: Dockerfile1
-          push: true
+          push: true         # set to true if you want to push to Docker Hub
+          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v${{ steps.set-version.outputs.new_version }}
+
+
+
+      #- name: push image
+      #  run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3  
+added
