--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -79,6 +79,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}  
       
       - name: Build Docker image and push to docker hub
+        if: github.ref == 'refs/heads/main'
+
         uses: docker/build-push-action@v4
         with:
           context: .
