--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -42,23 +42,25 @@ jobs:
           git config user.name "Harshavardhana"
           git config user.email "your-email@users.noreply.github.com"
 
+      - name: Check if tag already exists
+        id: check-tag
+        run: |
+          if git rev-parse "v${{ steps.set-version.outputs.new_version }}" >/dev/null 2>&1; then
+          echo "tag_exists=true" >> $GITHUB_OUTPUT
+          else
+          echo "tag_exists=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Push Git tag
+        if: steps.check-tag.outputs.tag_exists == 'false' && github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          tag_name="v${{ steps.set-version.outputs.new_version }}"
-          echo "Tag to push: $tag_name"
-
-          if git ls-remote --tags origin | grep -q "refs/tags/$tag_name$"; then
-            echo "⚠️ Tag $tag_name already exists. Skipping creation."
-          else
-            echo "✅ Creating new tag: $tag_name"
-            git tag -a "$tag_name" -m "Release $tag_name"
-            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "$tag_name"
-          fi
+          git tag -a "v${{ steps.set-version.outputs.new_version }}" -m "Release v${{ steps.set-version.outputs.new_version }}"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "v${{ steps.set-version.outputs.new_version }}"
 
       - name: Create GitHub Release
-        if: success()
+        if: steps.check-tag.outputs.tag_exists == 'false' && github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         with:
           tag_name: "v${{ steps.set-version.outputs.new_version }}"
@@ -66,7 +68,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}         
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
