--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -12,55 +12,56 @@ on:
     branches:
       - main
   workflow_dispatch:
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name : fetch all tags 
-        run: git fetch --tags 
-        
-      - name: Set Version
+      - name: Fetch all tags
+        run: git fetch --tags
+
+      - name: Set Version (auto-bump if tag exists)
         id: set-version
         run: |
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           if [ -z "$latest_tag" ]; then
+            # No tags yet → start at v1.0.0
             new_version="1.0.0"
           else
+            # Extract numbers
             IFS='.' read -r major minor patch <<< "${latest_tag#v}"
-            patch=$((patch + 1))
+
+            # Keep bumping patch until an unused version is found
+            while git rev-parse "v$major.$minor.$patch" >/dev/null 2>&1; do
+              patch=$((patch + 1))
+            done
+
             new_version="$major.$minor.$patch"
           fi
-          echo "New version: $new_version"
+
+          echo "New version determined: v$new_version"
           echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
-    
+
       - name: Set Git user
         run: |
           git config user.name "Harshavardhana"
           git config user.email "your-email@users.noreply.github.com"
 
-      - name: Check if tag already exists
-        id: check-tag
-        run: |
-          if git rev-parse "v${{ steps.set-version.outputs.new_version }}" >/dev/null 2>&1; then
-          echo "tag_exists=true" >> $GITHUB_OUTPUT
-          else
-          echo "tag_exists=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Push Git tag
-        if: steps.check-tag.outputs.tag_exists == 'false' && github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git tag -a "v${{ steps.set-version.outputs.new_version }}" -m "Release v${{ steps.set-version.outputs.new_version }}"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "v${{ steps.set-version.outputs.new_version }}"
+          version="v${{ steps.set-version.outputs.new_version }}"
+          git tag -a "$version" -m "Release $version"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "$version"
 
       - name: Create GitHub Release
-        if: steps.check-tag.outputs.tag_exists == 'false' && github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         with:
           tag_name: "v${{ steps.set-version.outputs.new_version }}"
@@ -77,30 +78,24 @@ jobs:
           java-version: '11'
           cache: 'maven'
 
-      - name: Build with maven 
-        run: mvn clean install -DskipTests      
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to docker hub
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}  
-      
-      - name: Build Docker image and push to docker hub
-        if: github.ref == 'refs/heads/main'
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Build Docker image and push to Docker Hub
+        if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile1
-          push: true         # set to true if you want to push to Docker Hub
-          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v${{ steps.set-version.outputs.new_version }}
-
-
-
-      #- name: push image
-      #  run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v3  
