--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,4 +1,4 @@
-name: Build and publish image to docker hub
+name: Build and publish image to Docker Hub
 
 permissions:
   contents: write
@@ -24,26 +24,23 @@ jobs:
       - name: Fetch all tags
         run: git fetch --tags
 
-      - name: Set Version (auto-bump if tag exists)
+      - name: Set Version (always bump)
         id: set-version
         run: |
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          if [ -z "$latest_tag" ]; then
-            # No tags yet → start at v1.0.0
-            new_version="1.0.0"
-          else
-            # Extract numbers
-            IFS='.' read -r major minor patch <<< "${latest_tag#v}"
+          # Get the latest tag, or start at v1.0.0 if none exist
+          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
 
-            # Keep bumping patch until an unused version is found
-            while git rev-parse "v$major.$minor.$patch" >/dev/null 2>&1; do
-              patch=$((patch + 1))
-            done
+          # Remove 'v' prefix and split version
+          IFS='.' read -r major minor patch <<< "${latest_tag#v}"
 
-            new_version="$major.$minor.$patch"
-          fi
+          # Increment patch version
+          patch=$((patch + 1))
 
-          echo "New version determined: v$new_version"
+          # Form new version
+          new_version="v${major}.${minor}.${patch}"
+
+          echo "Latest tag: $latest_tag"
+          echo "New version: $new_version"
           echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
 
       - name: Set Git user
@@ -56,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          version="v${{ steps.set-version.outputs.new_version }}"
+          version="${{ steps.set-version.outputs.new_version }}"
           git tag -a "$version" -m "Release $version"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "$version"
 
@@ -64,8 +61,8 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         with:
-          tag_name: "v${{ steps.set-version.outputs.new_version }}"
-          release_name: "Release v${{ steps.set-version.outputs.new_version }}"
+          tag_name: "${{ steps.set-version.outputs.new_version }}"
+          release_name: "Release ${{ steps.set-version.outputs.new_version }}"
           draft: false
           prerelease: false
         env:
@@ -98,4 +95,4 @@ jobs:
           context: .
           file: Dockerfile1
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:v${{ steps.set-version.outputs.new_version }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ steps.set-version.outputs.new_version }}
