--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,14 +1,10 @@
-name: Build and publish image to Docker Hub
+name: Build and publish Docker image
 
 permissions:
   contents: write
 
 on:
   push:
-    branches:
-      - main
-      - feature
-  pull_request:
     branches:
       - main
   workflow_dispatch:
@@ -18,47 +14,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout full repo with tags
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Fetch all tags
-        run: git fetch --tags
-
-      - name: Set Version (always bump)
+      # 2️⃣ Set Version (always bump)
+      - name: Set Version
         id: set-version
         run: |
-          # Get the latest tag, or start at v1.0.0 if none exist
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          # Fetch all tags
+          git fetch --tags
 
-          # Remove 'v' prefix and split version
+          # Get latest tag or default
+          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          echo "Latest tag: $latest_tag"
+
+          # Split into major.minor.patch
           IFS='.' read -r major minor patch <<< "${latest_tag#v}"
 
-          # Increment patch version
+          # Always bump patch
           patch=$((patch + 1))
-
-          # Form new version
           new_version="v${major}.${minor}.${patch}"
 
-          echo "Latest tag: $latest_tag"
           echo "New version: $new_version"
           echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
 
+      # 3️⃣ Configure Git
       - name: Set Git user
         run: |
-          git config user.name "Harshavardhana"
-          git config user.email "your-email@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
+      # 4️⃣ Push Git tag
       - name: Push Git tag
-        if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           version="${{ steps.set-version.outputs.new_version }}"
           git tag -a "$version" -m "Release $version"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} "$version"
+          git push origin "$version"
 
+      # 5️⃣ Create GitHub Release
       - name: Create GitHub Release
-        if: github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         with:
           tag_name: "${{ steps.set-version.outputs.new_version }}"
@@ -68,6 +67,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # 6️⃣ Setup JDK
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
@@ -75,21 +75,23 @@ jobs:
           java-version: '11'
           cache: 'maven'
 
+      # 7️⃣ Build Maven project
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
+      # 8️⃣ Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 9️⃣ Docker login
       - name: Login to Docker Hub
-        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image and push to Docker Hub
-        if: github.ref == 'refs/heads/main'
+      # 🔟 Build and push Docker image
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
