--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -8,6 +8,11 @@ on:
     branches:
       - feature
       - main
+
+  pull_request:
+    branches:
+      - feature
+      - main    
   workflow_dispatch:
 
 jobs:
