--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -47,6 +47,15 @@ jobs:
           echo "New version: $new_version"
           echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
 
+      
+      # 2️⃣a Update pom.xml version
+      - name: Update pom.xml version
+        run: |
+          mvn versions:set -DnewVersion=${{ steps.set-version.outputs.new_version }}
+          mvn versions:commit
+          git add pom.xml
+          git commit -m "Update pom.xml to version ${{ steps.set-version.outputs.new_version }}"    
+
       # 3️⃣ Configure Git
       - name: Set Git user
         run: |
