--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -8,7 +8,6 @@ on:
     branches:
       - feature
       - main
-
   pull_request:
     branches:
       - feature
@@ -26,54 +25,70 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 2️⃣ Set Version (always bump)
+      # 2️⃣ Determine next available tag and version
       - name: Set Version
         id: set-version
         run: |
-          # Fetch all tags
           git fetch --tags
 
-          # Get latest tag or default
+          # Start with latest tag or default
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
           echo "Latest tag: $latest_tag"
 
           # Split into major.minor.patch
           IFS='.' read -r major minor patch <<< "${latest_tag#v}"
 
-          # Always bump patch
-          patch=$((patch + 1))
-          new_version="v${major}.${minor}.${patch}"
+          # Increment patch until tag does not exist
+          while true; do
+            patch=$((patch + 1))
+            new_tag="v${major}.${minor}.${patch}"
+            if ! git rev-parse "$new_tag" >/dev/null 2>&1; then
+              break
+            fi
+          done
 
-          echo "New version: $new_version"
-          echo "new_version=$new_version" >> "$GITHUB_OUTPUT"   
+          new_version="${major}.${minor}.${patch}-SNAPSHOT"
+          echo "Next tag: $new_tag"
+          echo "Next version: $new_version"
 
-      # 3️⃣ Configure Git
+          echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
+          echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
+
+      # 3️⃣ Update pom.xml to new version
+      - name: Update pom.xml version
+        run: |
+          mvn versions:set -DnewVersion=${{ steps.set-version.outputs.new_version }}
+          mvn versions:commit
+          git add pom.xml
+          git commit -m "Update pom.xml to version ${{ steps.set-version.outputs.new_version }}"
+
+      # 4️⃣ Configure Git user
       - name: Set Git user
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 4️⃣ Push Git tag
+      # 5️⃣ Push Git tag
       - name: Push Git tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          version="${{ steps.set-version.outputs.new_version }}"
-          git tag -a "$version" -m "Release $version"
-          git push origin "$version"
+          git push origin HEAD  # push pom.xml commit
+          git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
+          git push origin "${{ steps.set-version.outputs.new_tag }}"
 
-      # 5️⃣ Create GitHub Release
+      # 6️⃣ Create GitHub Release
       - name: Create GitHub Release
         uses: actions/create-release@v1
         with:
-          tag_name: "${{ steps.set-version.outputs.new_version }}"
-          release_name: "Release ${{ steps.set-version.outputs.new_version }}"
+          tag_name: "${{ steps.set-version.outputs.new_tag }}"
+          release_name: "Release ${{ steps.set-version.outputs.new_tag }}"
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 6️⃣ Setup JDK
+      # 7️⃣ Setup JDK
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
@@ -81,35 +96,38 @@ jobs:
           java-version: '11'
           cache: 'maven'
 
-      # 7️⃣ Build Maven project
+      # 8️⃣ Build Maven project
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
-      # 8️⃣ Setup Docker Buildx
+      # 9️⃣ Push artifact to S3 (optional)
+      #- name: Configure AWS credentials
+      #  uses: aws-actions/configure-aws-credentials@v3
+      #  with:
+      #    role-to-assume: arn:aws:iam::<AWS_ACCOUNT_ID>:role/<OIDC_ROLE_FOR_GH_ACTIONS>
+      #    aws-region: <AWS_REGION>
+      #
+      #- name: Upload artifact to S3
+      #  run: |
+      #    ARTIFACT=target/my-app-${{ steps.set-version.outputs.new_version }}.jar
+      #    aws s3 cp $ARTIFACT s3://my-bucket/path/${{ steps.set-version.outputs.new_version }}/
+
+      # 🔟 Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 9️⃣ Docker login
+      # 1️⃣1️⃣ Docker login
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 🔟 Build and push Docker image
+      # 1️⃣2️⃣ Build and push Docker image
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile1
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ steps.set-version.outputs.new_version }}
-
-      
-      # 2️⃣a Update pom.xml version
-      - name: Update pom.xml version
-        run: |
-          mvn versions:set -DnewVersion=${{ steps.set-version.outputs.new_version }}
-          mvn versions:commit
-          git add pom.xml
-          git commit -m "Update pom.xml to version ${{ steps.set-version.outputs.new_version }}"     
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ steps.set-version.outputs.new_tag }}
