--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -98,6 +98,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # 9️⃣ Docker login
+      - name: Set Docker tag
+        id: docker-tag
+        run: |
+          if [ "${GITHUB_REF##*/}" = "main" ]; then
+            echo "docker_tag=v${{ steps.set-version.outputs.new_tag }}" >> $GITHUB_ENV
+          else
+            echo "docker_tag=${GITHUB_REF##*/}" >> $GITHUB_ENV
+          fi
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
