--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -30,93 +30,4 @@ jobs:
         id: set-version
         run: |
           git fetch --tags
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
-          echo "Latest tag: $latest_tag"
-
-          IFS='.' read -r major minor patch <<< "${latest_tag#v}"
-
-          # Increment patch until new tag does not exist
-          while true; do
-            patch=$((patch + 1))
-            new_tag="v${major}.${minor}.${patch}"
-            if ! git rev-parse "$new_tag" >/dev/null 2>&1; then
-              break
-            fi
-          done
-
-          echo "New tag: $new_tag"
-          echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
-
-      # 3️⃣ Configure Git (main branch only)
-      - name: Configure Git user
-        if: github.ref == 'refs/heads/main'
-        run: |
-          git config user.name "Harshavardhana"
-          git config user.email "your-email@example.com"
-
-      # 4️⃣ Push Git tag (main only)
-      - name: Push Git tag
-        if: github.ref == 'refs/heads/main'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
-          git push origin "${{ steps.set-version.outputs.new_tag }}"
-
-      # 5️⃣ Create GitHub release (main only)
-      - name: Create GitHub Release
-        if: github.ref == 'refs/heads/main'
-        uses: actions/create-release@v1
-        with:
-          tag_name: "${{ steps.set-version.outputs.new_tag }}"
-          release_name: "Release ${{ steps.set-version.outputs.new_tag }}"
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # 6️⃣ Setup JDK for Maven
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-          cache: 'maven'
-
-      # 7️⃣ Build Maven project
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
-
-      # 8️⃣ Setup Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # 9️⃣ Docker login
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # 🔟 Set Docker tag based on branch
-      - name: Set Docker tag
-        id: docker-tag
-        run: |
-          branch="${GITHUB_REF##*/}"
-          new_tag="${{ steps.set-version.outputs.new_tag }}"
-          if [ "$branch" = "main" ]; then
-          echo "docker_tag=$new_tag" >> $GITHUB_ENV
-          else
-          # Combine branch name with version tag
-          echo "docker_tag=${branch}-${new_tag}" >> $GITHUB_ENV
-          fi
-
-          
-      # 1️⃣1️⃣ Build and push Docker image
-      - name: Build and Push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile1
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
+          latest_tag=$(git describe --tags --abbrev=0 2
